5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1585_2894.log
== TEST (2019-03-21 11:25:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor do jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    valor do jogo = float(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:25:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:26:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 11
    print(?????)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:26:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:27:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + ("jogo")

# Impressao do valor total:
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = 45 + ("jogo")
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:27:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + int("jogo")

# Impressao do valor total:
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = 45 + int("jogo")
ValueError: invalid literal for int() with base 10: 'jogo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:28:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + int(" Digite o valor do jogo: ")

# Impressao do valor total:
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = 45 + int(" Digite o valor do jogo: ")
ValueError: invalid literal for int() with base 10: ' Digite o valor do jogo: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:29:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + float(input(" Digite o valor do jogo: ")

# Impressao do valor total:
print("total")
-- ERROR:
File "XXXX", line 11
    print("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:30:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + float(input(" Digite o valor do jogo: ")

# Impressao do valor total:
print("total")
-- ERROR:
File "XXXX", line 11
    print("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:30:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + float(input(" Digite o valor do jogo: ")

# Impressao do valor total:

-- ERROR:
File "XXXX", line 11
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:30:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + float(input(" Digite o valor do jogo: ")

# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 11
    print ("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:30:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45 + float(input(" Digite o valor do jogo: ")

# Impressao do valor total:
print (total)
-- ERROR:
File "XXXX", line 11
    print (total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:32:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = float(input("frete")) + float(input(" Digite o valor do jogo: ")
frete= 45
# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 9
    frete= 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:32:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = float(input("frete")) + float(input(" Digite o valor do jogo: ")
frete = 45
# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 9
    frete = 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:32:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = float(input("frete")) + float(input(" Digite o valor do jogo: ")
("frete") = 45
# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 11
    print ("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
("total") = float(input("frete")) + float(input(" Digite o valor do jogo: ")
("frete") = 45
# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 11
    print ("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
("total") = float(input("frete")) + float(input(" Digite o valor do jogo: ")
("frete") = float(input(45))
# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 11
    print ("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:34:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
("total") = float(input("frete")) + float(input(" Digite o valor do jogo: ")
("frete") = float(input(45))

# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 12
    print ("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
frete = float(input(45))

# Calculo do valor a ser pago, incluindo o frete:
total = print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete = float(input(45))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = float(input(45))
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = print("jogo") + print("frete")
TypeError: unsupported operand type(s) for +: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = print("jogo") * 8 + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = print("jogo") * 8 + print("frete")
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = print("jogo.") * 8 + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = print("jogo.") * 8 + print("frete")
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = 8 * print("jogo") + print("frete")
TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * float(input("jogo")) + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = 8 * float(input()) + print("frete")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * float(input("jogo")) + float(input("frete"))

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = 8 * float(input()) + float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:41:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * float(input("jogo")) + float(input("frete"))

# Impressao do valor total:
print ("total")
-- EXECUTION TIME:
0.156845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 9, in <module>
    total = 8 * float(input()) + float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * float(input("jogo")) + float(input("frete"))

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = 8 * float(input()) + float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = 8 * print("jogo") + print("frete")
TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
quantidade de jogos = 8 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = print ("quantidade de jogos") * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 6
    quantidade de jogos = 8 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
quantidade = 8 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = print ("quantidade de jogos") * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = print ("quantidade de jogos") * print("jogo") + print("frete")
TypeError: unsupported operand type(s) for *: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
quantidade = 8 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = print ("quantidade") * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = print ("quantidade") * print("jogo") + print("frete")
TypeError: unsupported operand type(s) for *: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
quantidade = 8 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = (print ("quantidade") * print("jogo")) + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (print ("quantidade") * print("jogo")) + print("frete")
TypeError: unsupported operand type(s) for *: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
quantidade = 8 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = (print ("quantidade") * print("jogo")) + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (print ("quantidade") * print("jogo")) + print("frete")
TypeError: unsupported operand type(s) for *: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
n = 8 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = (print ("n") * print("jogo")) + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (print ("n") * print("jogo")) + print("frete")
TypeError: unsupported operand type(s) for *: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
n = 8 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = (float(input("n")) * print("jogo")) + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (float(input()) * print("jogo")) + print("frete")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = (float(input(8)) * print("jogo")) + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = (float(input(8)) * print("jogo")) + print("frete")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * print("jogo")) + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
File "XXXX", line 9
    total = 8 * print("jogo")) + print("frete")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = 8 * print("jogo") + print("frete")
TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = float(input(8)) * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = float(input(8)) * print("jogo") + print("frete")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = int(input(8)) * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = int(input(8)) * print("jogo") + print("frete")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = float(input(8)) * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = float(input(8)) * print("jogo") + print("frete")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:51:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
quantidade = 8
total = float(input('quantidade')) * print("jogo") + print("frete")

# Impressao do valor total:
print ("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = float(input()) * print("jogo") + print("frete")
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = jogo + frete

# Impressao do valor total:
print (total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print (total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:59:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
 
# Calculo do valor a ser pago, incluindo o frete:
frete = 45
total = 8 * jogo + frete

# Impressao do valor total:
print (total)
-- EXECUTION TIME:
0.124237
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:13:18) 
-- CODE:
# UNIVERSIDADE FEDERAL DO AMAZONAS
# ALUNA: BRUNA SANTIAGO DOS SANTOS
# DIA: 01/04/2018
# INTRODUÇÃO A PROGRAMAÇÃO DE COMPUTADORES

# Leia o valor unitario do jogo:
x = float(input(" Digite o valor unitario do jogo: "))
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:16:00) 
-- CODE:
# UNIVERSIDADE FEDERAL DO AMAZONAS
# ALUNA: BRUNA SANTIAGO DOS SANTOS
# DIA: 01/04/2018
# INTRODUÇÃO A PROGRAMAÇÃO DE COMPUTADORES

# Leia o valor unitario do jogo:
x = float(input(" Digite o valor unitario do jogo: "))

# Frete possui valor fixo: 
y = 45

# Quantidade de jogos:
s = float(input(" Digite a quantidade de jogos: "))

# Valor a ser pago: 
print((x * s) + y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    s = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:16:13) 
-- CODE:
# UNIVERSIDADE FEDERAL DO AMAZONAS
# ALUNA: BRUNA SANTIAGO DOS SANTOS
# DIA: 01/04/2018
# INTRODUÇÃO A PROGRAMAÇÃO DE COMPUTADORES

# Leia o valor unitario do jogo:
x = float(input(" Digite o valor unitario do jogo: "))

# Frete possui valor fixo: 
y = 45

# Quantidade de jogos:
s = float(input(" Digite a quantidade de jogos: "))

# Valor a ser pago: 
print((x * s) + y)
-- EXECUTION TIME:
0.177929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 13, in <module>
    s = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:16:34) 
-- CODE:
# UNIVERSIDADE FEDERAL DO AMAZONAS
# ALUNA: BRUNA SANTIAGO DOS SANTOS
# DIA: 01/04/2018
# INTRODUÇÃO A PROGRAMAÇÃO DE COMPUTADORES

# Leia o valor unitario do jogo:
x = float(input(" Digite o valor unitario do jogo: "))

# Frete possui valor fixo: 
y = 45

# Valor a ser pago: 
print((x * 8) + y)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:16:42) 
-- CODE:
# UNIVERSIDADE FEDERAL DO AMAZONAS
# ALUNA: BRUNA SANTIAGO DOS SANTOS
# DIA: 01/04/2018
# INTRODUÇÃO A PROGRAMAÇÃO DE COMPUTADORES

# Leia o valor unitario do jogo:
x = float(input(" Digite o valor unitario do jogo: "))

# Frete possui valor fixo: 
y = 45

# Valor a ser pago: 
print((x * 8) + y)
-- EXECUTION TIME:
0.194546
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:41:17) 
-- CODE:
# UNIVERSIDADE FEDERAL DO AMAZONAS
# ALUNA: BRUNA SANTIAGO DOS SANTOS
# DIA: 01/04/2018
# INTRODUÇÃO A PROGRAMAÇÃO DE COMPUTADORES

# Leia o valor unitario do jogo:
x = float(input(" Digite o valor unitario do jogo: "))

# Frete possui valor fixo: 
y = 45

# Valor a ser pago: 
print((x * 8) + y)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
